Updated Equation Calculator HTML
Updated HTML File (Time & Version)

--- a/EquationCalculatorWebApp/EquationCalculator.html
+++ b/EquationCalculatorWebApp/EquationCalculator.html
@@ -10,7 +10,7 @@
 				<h2>Calculate Equations</h2>
 				<hr>
 				<h2>How does it work?<h2>
-				<p>It will calulate your equation under seconds<br>Insert values on Parameters below then press Calculate</p>
+				<p>It will calulate your equation fast and easy<br>Insert values on Parameters below then press Calculate</p>
 				<hr>
 				<h3 id="eText"></h3>
 				Value 1 <input type="number" id="val1" value="0"><br>
