--- a/EquationCalculatorWebApp/EquationCalculator.html
+++ b/EquationCalculatorWebApp/EquationCalculator.html
@@ -11,7 +11,7 @@
 				<hr>
 				<h2>Example</h2>
 				<p>Question : 1a + 2 = 3</p>
-				<p>Answer : a = 1</p>
+				<p>Result : a = 1</p>
 				<hr>
 				<h2>How does it work?<h2>
 				<p>It will calulate your equation fast and easy<br>Insert values on Parameters below then press Calculate</p>
